codama-macros/tests/codama_attribute/values_nodes/public_key_value_node/no_input.fail.rs
use codama_macros::codama;

#[codama(default_value = public_key)]
pub struct Test;

#[codama(default_value = public_key())]
pub struct TestWithParenthesis;

fn main() {}
